syntax = "proto3";

option java_multiple_files = true;

package block_time;

message CheckBlockTimeRequest {
  string date = 1;
  string time = 2;
}

message CheckBlockTimeResponse {
  bool isBlocked = 1;
}

service BlockTimeService {
  rpc checkBlockTime(CheckBlockTimeRequest) returns(CheckBlockTimeResponse);
}
